--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>snake game</h1>
-    <div class="solid"> greeks for geeks</div>
+    <div class="solid">Bibekananda Sahoo</div>
     <canvas id ="board"></canvas>
 </body>
 </html>
