--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <script src="snake.js"></script>
 </head>
 <body>
-    <h1>snake game</h1>
-    <div class="solid">Bibekananda Sahoo</div>
+    <div class="solid">The Snake Puzzle</div>
     <canvas id ="board"></canvas>
 </body>
 </html>
